...
        android:clickable="false"
        app:backgroundTint="@color/colorFab2"
        app:srcCompat="@drawable/ic_format_list_bulleted_white"
        android:layout_marginEnd="@dimen/fab_margin" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:visibility="invisible"
        android:clickable="false"
        app:backgroundTint="@color/colorFab1"
        app:srcCompat="@drawable/ic_restaurant_white"
        android:layout_marginEnd="@dimen/fab_margin" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_white" />

...
