...
    <string name="recipe_name_hint">Название рецепта</string>
    <string name="recipe_category">Категория</string>
    <string name="recipe_ingredients">Ингредиенты</string>
    <string name="contentdesc_add_ingredient">Добавить кнопку ингридиентов</string>
    <string name="contentdesc_remove_ingredient">Удалить кнопку ингридиентов</string>
    <string name="recipe_instructions">Приготовление</string>
    <string name="action_save">Сохранить</string>
    <string name="action_cancel">Отмена</string>
    <string name="create_recipe_cancel">Сброс?</string>
    <string name="yes">Ок</string>
    <string name="recipe_no_category">Без категории</string>
    <string name="title_activity_view_recipe">Показать рецепт</string>
    <string name="action_edit_recipe">Изменить рецепт</string>
    <string name="action_delete_recipe">Удалить рецепт</string>
    <string name="cancel">Отмена</string>
    <string name="alert_delete_recipe">Удалить рецепт?</string>
    <string name="alert_recipe_saved">Рецепт сохранен!</string>
    <string name="title_activity_edit_recipe">Изменить рецепт</string>
    <string name="title_activity_edit_categories">Категория</string>
...
