<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_no_recipes"
        android:text="@string/title_no_recipes"
        android:visibility="gone"
        android:layout_gravity="center"
        android:padding="8dp"/>

    <ListView
        android:id="@+id/list_recipes_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

</FrameLayout>